# python-pskc

./: .gitignore  .travis.yml  ChangeLog  MANIFEST.in  NEWS  README  csv2pskc.py  pskc2csv.py  pskc2pskc.py  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
docs/: changes.rst  conf.py  csv2pskc.rst  encryption.rst  exceptions.rst  index.rst  mac.rst  policy.rst  pskc2csv.rst  pskc2pskc.rst  scripts.rst  signatures.rst  usage.rst
pskc/: __init__.py  aeskw.py  algorithms.py  device.py  encryption.py  exceptions.py  key.py  mac.py  parse.py  parser.py  policy.py  serialiser.py  signature.py  xml.py
pskc/crypto/: __init__.py  aeskw.py  (+1 more)
tests/: aes128-cbc.pskcxml  aes192-cbc.pskcxml  aes256-cbc.pskcxml  draft-keyprov-totp.pskcxml  invalid-encryption.pskcxml  invalid-mac-value.pskcxml  invalid-no-mac-method.pskcxml  invalid-wrongversion.pskcxml  kw-aes256.pskcxml  odd-namespace.pskcxml  rfc6030-figure10.pskc  rfc6030-figure2.pskc  rfc6030-figure3.pskcxml  rfc6030-figure4.pskc  rfc6030-figure5.pskcxml  rfc6030-figure6.pskcxml  rfc6030-figure7.pskc  rfc6030-figure7.pskcxml  test-rfc6030.doctest  test_actividentity.doctest  test_aeskw.doctest  test_crypto.doctest  test_csv2pskc.doctest  test_draft_hoyer_keyprov_portable_symmetric_key_container.doctest  test_draft_ietf_keyprov_pskc_02.doctest  test_draft_keyprov.doctest  test_encryption.doctest  test_feitian.doctest  test_invalid.doctest  test_mac.doctest  test_minimal.doctest  test_misc.doctest  test_multiotp.doctest  test_nagraid.doctest  test_pskc2csv.doctest  test_pskc2pskc.doctest  test_rfc6030.doctest  test_signature.doctest  test_tripledeskw.doctest  test_vendors.doctest  (+3 more)
(+75 files in other folders)
