[metadata]
license_file=COPYING

[sdist]
owner=root
group=root

[bdist_wheel]
universal = 1

[nosetests]
with-doctest=true
doctest-extension=doctest
doctest-options=+IGNORE_EXCEPTION_DETAIL
with-coverage=true
cover-branches=true
cover-package=pskc
cover-inclusive=true
cover-erase=true
cover-html=true
cover-html-dir=coverage
cover-min-percentage=100

[build_sphinx]
all_files = 1
builder = html man

[flake8]
ignore =
  B902  # catching Exception is fine
  D105  # Missing docstring in magic method
  D107  # Missing docstring in __init__
  Q001  # Use of ''' multiline strings
  W504  # we put the binary operator on the preceding line
max-complexity = 14
max-line-length = 78
