[metadata]
license_file = COPYING

[sdist]
owner=root
group=root

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --doctest-modules --doctest-glob="*.doctest" pskc tests --cov=pskc --cov-report=term-missing:skip-covered --cov-report=html
doctest_optionflags = IGNORE_EXCEPTION_DETAIL

[coverage:run]
branch = true

[coverage:report]
show_missing=true

[coverage:html]
directory = coverage

[build_sphinx]
all_files = 1
builder = html man

[flake8]
ignore =
  B902  # catching Exception is fine
  D105  # Missing docstring in magic method
  D107  # Missing docstring in __init__
  Q001  # Use of ''' multiline strings
  W504  # we put the binary operator on the preceding line
max-complexity = 14
max-line-length = 120
extend-exclude =
  .github
  .pytest_cache
  build

[codespell]
skip = jquery*,*.egg-info,ChangeLog,./.git,./.tox,./build,./coverage,./std
